Fixes #629 - Added buggy urldecoder compatibility mode